--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,16 @@
 apply from: 'version-plugin.gradle'
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'jacoco'
+
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+    }
+}
