--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 apply from: 'version-plugin.gradle'
 
+ext.configDir = new File(rootDir, 'config')
+
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'jacoco'
+
+    apply from: "$configDir/jacoco/jacoco.gradle"
+    apply from: "$configDir/checkstyle/checkstyle.gradle"
 
     sourceCompatibility = 1.8
 
