--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,7 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version: '4.11'
     }
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.4.1'
+}
