Get cml report from quality analysis plugins

--- a/config/jdepend/jdepend.gradle
+++ b/config/jdepend/jdepend.gradle
@@ -2,14 +2,14 @@ apply plugin: 'jdepend'
 
 jdependMain {
     reports {
-        xml.enabled false
-        text.enabled true
+        xml.enabled true
+        text.enabled false
     }
 }
 
 jdependTest {
     reports {
-        xml.enabled false
-        text.enabled true
+        xml.enabled true
+        text.enabled false
     }
 }
