--- a/config/findbugs/findbugs.gradle
+++ b/config/findbugs/findbugs.gradle
@@ -2,7 +2,7 @@ apply plugin: 'findbugs'
 
 tasks.withType(FindBugs) {
     reports {
-        xml.enabled false
-        html.enabled true
+        xml.enabled true
+        html.enabled false
     }
 }
