--- a/config/pmd/pmd.gradle
+++ b/config/pmd/pmd.gradle
@@ -2,14 +2,14 @@ apply plugin: 'pmd'
 
 pmdMain {
     reports {
-        xml.enabled false
-        html.enabled true
+        xml.enabled true
+        html.enabled false
     }
 }
 
 pmdTest {
     reports {
-        xml.enabled false
-        html.enabled true
+        xml.enabled true
+        html.enabled false
     }
 }
