--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,17 @@ apply from: 'version-plugin.gradle'
 
 ext.configDir = new File(rootDir, 'config')
 
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2.1"
+    }
+}
+
 subprojects {
     apply plugin: 'java'
     apply plugin: "org.sonarqube"
