--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
 systemProp.sonar.host.url=http://localhost:9000
-
-#----- Security (when 'sonar.forceAuthentication' is set to 'true')
-systemProp.sonar.login=token
+systemProp.sonar.login=admin
+systemProp.sonar.password=admin
